--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#apresentacao" class="hover:text-orange-200">Apresentação</a>
         <a href="#Backgrounds" class="hover:text-orange-200">Backgrounds</a>
         <a href="#aulas" class="hover:text-orange-200">Aulas</a>
-        <a href="#Artigos" class="hover:text-orange-200">Artigos</a>
+        <a href="#Artigos" class="hover:text-orange-200">Artigos  </a>
         <a href="#videos" class="hover:text-orange-200">Vídeos Recentes</a>
         <a href="#download" class="hover:text-orange-200">Download</a>
         <a href="#sobre" class="hover:text-orange-200">Sobre</a>
@@ -182,25 +182,25 @@
       e um passo-a-passo resumido de montagem.
     </p>
 
-    <!-- GALERIA DE IMAGENS INLINE -->
+    <!-- GALERIA DE IMAGENS INLINE COM SUAS FOTOS -->
     <div class="grid md:grid-cols-3 gap-6">
 
       <div class="text-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Barco_projector.jpg"
-             class="w-full h-40 object-cover rounded-xl shadow mb-2">
-        <p class="text-sm text-gray-500">Exemplo de Projetor</p>
+        <img src="https://raw.githubusercontent.com/Projetoholyrics/Projetoholyrics.github.io/main/projetor%20de%20led.jpg"
+             class="w-full h-40 object-cover rounded-xl shadow mbuse mb-2">
+        <p class="text-sm text-gray-500">Projetor de LED</p>
       </div>
 
       <div class="text-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/LED_Projector_machine.jpg"
+        <img src="https://raw.githubusercontent.com/Projetoholyrics/Projetoholyrics.github.io/main/tela%20para%20proje%C3%A7%C3%A3o.jpg"
              class="w-full h-40 object-cover rounded-xl shadow mb-2">
-        <p class="text-sm text-gray-500">Projetor LED</p>
+        <p class="text-sm text-gray-500">Tela de projeção</p>
       </div>
 
       <div class="text-center">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/4/40/Projection-screen-home.jpg"
+        <img src="https://raw.githubusercontent.com/Projetoholyrics/Projetoholyrics.github.io/main/projetor%20epson.jpg"
              class="w-full h-40 object-cover rounded-xl shadow mb-2">
-        <p class="text-sm text-gray-500">Tela de Projeção</p>
+        <p class="text-sm text-gray-500">Projetor Epson (exemplo)</p>
       </div>
 
     </div>
@@ -219,75 +219,193 @@
         <br>• 4.000+ lumens para ambientes claros
       </li>
       <li><strong>Resolução</strong> — FHD (1080p) já traz excelente nitidez para letras; 4K é ideal para telas grandes.</li>
-      <li><strong>Tipo de luz</strong> — Laser: vida útil maior e manutenção menor. / Lamp: custo menor, mas exige troca.</li>
-      <li><strong>Conexões</strong> — HDMI é obrigatório; VGA só se o equipamento for antigo.</li>
-      <li><strong>Throw Ratio</strong> — define a distância necessária do projetor até a tela.</li>
+      <li><strong>Tipo de luz</strong> — Laser: vida útil maior e manutenção menor. / Lâmpada convencional: mais barato, mas exige troca.</li>
+      <li><strong>Conexões</strong> — HDMI é altamente recomendado; outras entradas são úteis dependendo do setup.</li>
+      <li><strong>Throw Ratio</strong> — determina a relação entre a distância do projetor até a tela e o tamanho da imagem.</li>
     </ul>
 
     <!-- SEÇÃO: Notebook / PC -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-4">2. Notebook / PC (Fonte de sinal)</h3>
     <p class="text-gray-700">
-      Função: roda o Holyrics ou outro software de projeção. Precisa ser confiável e rápido.
+      Função: roda o Holyrics ou outro software de projeção, além de vídeos e backgrounds animados.
     </p>
 
     <ul class="list-disc pl-6 text-gray-700">
-      <li><strong>Processador:</strong> i5 / Ryzen 5 para cima.</li>
-      <li><strong>RAM:</strong> 8 GB (mínimo) — 16 GB recomendado.</li>
-      <li><strong>Armazenamento:</strong> SSD para carregar mais rápido os slides e vídeos.</li>
-      <li><strong>Saídas de vídeo:</strong> HDMI é o ideal; tenha adaptadores USB-C → HDMI.</li>
+      <li><strong>Processador:</strong> modelos modernos, como Intel i5 ou Ryzen 5, são adequados.</li>
+      <li><strong>RAM:</strong> 8 GB no mínimo; 16 GB é ideal para lidar com multitarefas e mídia pesada.</li>
+      <li><strong>Armazenamento:</strong> SSD (256 GB ou mais) para carregar rapidamente os arquivos de mídia.</li>
+      <li><strong>Saídas de vídeo:</strong> HDMI integrado; adaptadores para USB-C → HDMI, se necessário.</li>
     </ul>
 
     <!-- SEÇÃO: Cabos e Adaptadores -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-4">3. Cabos e adaptadores</h3>
     <p class="text-gray-700">
-      Função: garantir que o sinal chegue sem falhas ao projetor.
+      Função: transmitir o sinal de vídeo (e áudio) do computador para o projetor de maneira confiável.
     </p>
     <ul class="list-disc pl-6 text-gray-700">
-      <li><strong>HDMI:</strong> cabo básico até 10 m funciona bem; acima disso, prefira HDMI ativo ou fibra.</li>
-      <li><strong>Adaptadores:</strong> leve reservas — USB-C → HDMI, Mini DisplayPort → HDMI e VGA → HDMI.</li>
+      <li><strong>HDMI:</strong> um cabo de boa qualidade é essencial; até 10 metros funciona bem com cabo passivo, para mais é melhor usar cabo ativo ou soluções de extensão.</li>
+      <li><strong>Adaptadores:</strong> como USB-C para HDMI, DisplayPort para HDMI ou VGA para HDMI, dependendo do seu dispositivo.</li>
     </ul>
 
-    <!-- SEÇÃO: Tela -->
+    <!-- SEÇÃO: Tela / Superfície de projeção -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-4">4. Tela de projeção</h3>
     <p class="text-gray-700">
-      Função: refletir a imagem de forma limpa e sem distorções.
+      Função: refletir a imagem de forma clara para os espectadores.
     </p>
-
     <ul class="list-disc pl-6 text-gray-700">
-      <li><strong>Tela retrátil:</strong> prática e fácil de transportar.</li>
-      <li><strong>Tela fixa:</strong> oferece contraste melhor.</li>
-      <li><strong>Parede branca:</strong> solução econômica, desde que esteja bem pintada.</li>
+      <li><strong>Tela retrátil:</strong> prática e fácil de guardar.</li>
+      <li><strong>Tela fixa:</strong> oferece melhor plano de imagem e contraste.</li>
+      <li><strong>Parede branca bem pintada:</strong> alternativa econômica se estiver bem preparada.</li>
     </ul>
 
     <!-- SEÇÃO: Som -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-4">5. Sistema de som</h3>
     <p class="text-gray-700">
-      Função: reproduzir áudio de vídeos e fundos musicais vindos do computador.
+      Função: reproduzir áudio de vídeos e música de fundo.
     </p>
     <ul class="list-disc pl-6 text-gray-700">
-      <li><strong>Caixas amplificadas</strong> ou conexão com a mesa de som.</li>
-      <li><strong>Cabos P2, P10 ou XLR</strong> dependendo da mesa.</li>
-      <li>Evite usar áudio via Bluetooth — tem atraso.</li>
+      <li>Caixas amplificadas (ativas) ou conexão com mesa de som.</li>
+      <li>Use cabos P2, XLR ou P10, dependendo da mesa ou sistema.</li>
+      <li>Evite depender de Bluetooth para projeção de áudio, pode haver latência.</li>
     </ul>
 
-    <!-- PASSO A PASSO -->
-    <h3 class="text-2xl font-semibold text-orange-700 mt-4">Passo a passo resumido para montar a projeção</h3>
-
+    <!-- PASSO A PASSO RESUMIDO -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">Passo a passo de montagem</h3>
     <ol class="list-decimal pl-6 text-gray-700">
-      <li>Posicione o projetor na distância ideal da tela.</li>
-      <li>Ligue o computador ao projetor via HDMI.</li>
-      <li>Ajuste foco, brilho e keystone no projetor.</li>
-      <li>Conecte o áudio à mesa de som (se usar vídeos).</li>
-      <li>Teste slides, vídeos e animações antes do culto.</li>
-      <li>Tenha sempre cabos reservas e adaptadores extras.</li>
+      <li>Posicione o projetor na distância ideal segundo o throw ratio.</li>
+      <li>Ligue o notebook ao projetor.</li>
+      <li>Ajuste foco, brilho e geometria no projetor.</li>
+      <li>Conecte o áudio (se houver).</li>
+      <li>Teste com slides, vídeos ou backgrounds animados.</li>
+      <li>Tenha cabos reserva e adaptadores extras.</li>
     </ol>
 
     <!-- CONCLUSÃO -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-4">Conclusão</h3>
     <p class="text-gray-700">
-      A projeção pode ser algo extremamente simples ou muito profissional, dependendo do investimento.
-      Entretanto, com um bom projetor, um notebook confiável, cabos adequados e uma tela de qualidade,
-      você já consegue entregar uma projeção bonita, estável e visualmente agradável.
+      Usar bons equipamentos faz toda a diferença na projeção. Um projetor ideal, um computador confiável, cabos corretos e uma boa superfície de projeção garantem uma experiência profissional e eficiente para o culto. Investir bem agora evita problemas e garante credibilidade na apresentação das letras e vídeos.
+    </p>
+
+  </div>
+</section>
+<!-- Artigo 2: Como escolher o projetor ideal para sua igreja -->
+<section id="artigo-projetor-ideal" class="py-20 bg-white px-6 text-center">
+  <h2 class="text-3xl font-semibold text-orange-700 mb-10">🔍 Artigo — Como escolher o projetor ideal para sua igreja</h2>
+
+  <div class="max-w-4xl mx-auto text-left space-y-6">
+
+    <p class="text-gray-700">
+      Escolher o projetor ideal para sua igreja é uma tarefa que exige atenção, pois a projeção precisa ser clara,
+      nítida e visível para todos os membros — mesmo com luz ambiente. Neste artigo, você vai aprender como escolher
+      o modelo certo com base em luminosidade, resolução, distância, tela e tipo de tecnologia.
+    </p>
+
+    <!-- 1. Lumens -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">1. Diferença entre 2.500, 3.000 e 5.000 lumens</h3>
+
+    <p class="text-gray-700">
+      A medida de “lumens” indica o brilho do projetor. Quanto mais lumens, mais forte será o brilho da imagem, o que
+      é essencial para igrejas que possuem iluminação natural ou refletores.
+    </p>
+
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>2.500 lumens:</strong> Ideal apenas para ambientes pequenos e com luz totalmente controlada. Letras podem ficar apagadas se o ambiente estiver claro.</li>
+      <li><strong>3.000 lumens:</strong> Já oferece mais força de brilho. Funciona bem em igrejas pequenas ou médias com pouca luz ambiente.</li>
+      <li><strong>5.000 lumens:</strong> Excelente para igrejas médias e grandes, ambientes claros, ou quando a tela é muito grande.</li>
+    </ul>
+
+    <p class="text-gray-700">
+      🔸 <strong>Recomendação geral:</strong> Para a maioria das igrejas, 4.000 a 5.000 lumens é o ideal.  
+      🔸 <strong>Quanto maior a igreja, maior deve ser o brilho.</strong>
+    </p>
+
+    <!-- 2. Resolução -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">2. Resolução recomendada</h3>
+
+    <p class="text-gray-700">
+      A resolução determina o nível de nitidez da imagem, principalmente para letras utilizadas no Holyrics.
+    </p>
+
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>HD – 1280×720:</strong> Funciona para telas pequenas, porém letras podem ficar um pouco serrilhadas.</li>
+      <li><strong>Full HD – 1920×1080:</strong> Ideal para praticamente todas as igrejas. Letras ficam nítidas e vídeos ficam perfeitos.</li>
+      <li><strong>4K – 3840×2160:</strong> Excelente qualidade, indicado apenas para telas gigantes. Ainda pouco usado por igrejas devido ao custo.</li>
+    </ul>
+
+    <p class="text-gray-700">
+      🔸 <strong>Recomendação geral: Full HD (1080p)</strong>.  
+      Nítido, acessível e funciona perfeitamente com qualquer software de projeção.
+    </p>
+
+    <!-- 3. Distância e Throw Ratio -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">3. Distância, tela e Throw Ratio</h3>
+
+    <p class="text-gray-700">
+      O “throw ratio” define o tamanho da imagem projetada de acordo com a distância do projetor até a tela.
+      Isso é muito importante para evitar imagem pequena demais ou distorcida.
+    </p>
+
+    <p class="text-gray-700">
+      Fórmula básica:
+    </p>
+
+    <pre class="bg-gray-100 p-4 rounded-xl text-sm">
+Tamanho da tela = Distância do projetor ÷ Throw Ratio
+    </pre>
+
+    <p class="text-gray-700">
+      Exemplos:
+    </p>
+
+    <ul class="list-disc pl-6 text-gray-700">
+      <li><strong>Throw 1.5:</strong> A cada 1.5 metros de distância, a imagem tem 1 metro de largura.</li>
+      <li><strong>Short Throw (0.5 a 0.8):</strong> Projeta telas grandes em distâncias curtas — ideal para salas pequenas.</li>
+      <li><strong>Long Throw:</strong> Projetores instalados no fundo da igreja, distâncias longas e telas grandes.</li>
+    </ul>
+
+    <p class="text-gray-700">
+      🔸 <strong>Regra prática:</strong> sempre confirme o throw ratio antes de comprar o projetor.
+    </p>
+
+    <!-- 4. Tipo de tecnologia -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-4">4. Projetores a laser vs lâmpada</h3>
+
+    <p class="text-gray-700">
+      O tipo de iluminação do projetor influencia o brilho, durabilidade e manutenção.
+    </p>
+
+    <h4 class="text-xl font-semibold text-orange-600 mt-2">Projetores com lâmpada</h4>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li>Mais baratos</li>
+      <li>Precisam trocar a lâmpada após 3.000–5.000 horas</li>
+      <li>Brilho perde força com o tempo</li>
+    </ul>
+
+    <h4 class="text-xl font-semibold text-orange-600 mt-4">Projetores a laser</h4>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li>Vida útil muito maior (20.000 horas)</li>
+      <li>Brilho forte e constante</li>
+      <li>Baixa manutenção</li>
+      <li>Melhor custo-benefício a longo prazo</li>
+    </ul>
+
+    <p class="text-gray-700">
+      🔸 <strong>Recomendação geral:</strong> Se a igreja tiver orçamento, escolha um projetor a laser.  
+      Caso contrário, os modelos de lâmpada também funcionam bem quando têm boa luminosidade.
+    </p>
+
+    <!-- Conclusão -->
+    <h3 class="text-2xl font-semibold text-orange-700 mt-6">Conclusão</h3>
+
+    <p class="text-gray-700">
+      A escolha do projetor ideal depende do tamanho da sua igreja, da quantidade de luz ambiente e do tipo de conteúdo
+      projetado. Em geral, um projetor de <strong>4.000 a 5.000 lumens, Full HD e de tecnologia laser</strong> oferece a melhor combinação
+      entre custo, qualidade e durabilidade.
+    </p>
+
+    <p class="text-gray-700">
+      Usando essas recomendações, você consegue escolher um projetor perfeito para seu espaço e garantir uma projeção
+      nítida e profissional para todos.
     </p>
 
   </div>
