--- a/index.html
+++ b/index.html
@@ -374,25 +374,61 @@ Tamanho da tela = Distância do projetor ÷ Throw Ratio
       O tipo de iluminação do projetor influencia o brilho, durabilidade e manutenção.
     </p>
 
-    <h4 class="text-xl font-semibold text-orange-600 mt-2">Projetores com lâmpada</h4>
-    <ul class="list-disc pl-6 text-gray-700">
-      <li>Mais baratos</li>
-      <li>Precisam trocar a lâmpada após 3.000–5.000 horas</li>
-      <li>Brilho perde força com o tempo</li>
-    </ul>
+    <!-- Dentro do artigo “Como escolher o projetor ideal para sua igreja” -->
 
-    <h4 class="text-xl font-semibold text-orange-600 mt-4">Projetores a laser</h4>
-    <ul class="list-disc pl-6 text-gray-700">
-      <li>Vida útil muito maior (20.000 horas)</li>
-      <li>Brilho forte e constante</li>
-      <li>Baixa manutenção</li>
-      <li>Melhor custo-benefício a longo prazo</li>
-    </ul>
+<h4 class="text-xl font-semibold text-orange-600 mt-4">Projetores com lâmpada — Exemplo Epson</h4>
+<div class="bg-gray-50 p-4 rounded-xl shadow-inner">
+  <img src="https://raw.githubusercontent.com/Projetoholyrics/Projetoholyrics.github.io/main/projetor%20epson.jpg?raw=true"
+       class="w-full max-w-md mx-auto rounded-xl shadow mb-4"
+       alt="Projetor Epson PowerLite S12+">
 
-    <p class="text-gray-700">
-      🔸 <strong>Recomendação geral:</strong> Se a igreja tiver orçamento, escolha um projetor a laser.  
-      Caso contrário, os modelos de lâmpada também funcionam bem quando têm boa luminosidade.
-    </p>
+  <h5 class="text-lg font-bold text-orange-700 mb-2">Ficha técnica — Epson PowerLite S12+</h5>
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li><strong>Brilho (ANSI):</strong> ~2.800 lumens</li>
+    <li><strong>Resolução:</strong> SVGA (800 × 600)</li>
+    <li><strong>Tecnologia:</strong> 3LCD</li>
+    <li><strong>Lâmpada:</strong> UHE</li>
+    <li><strong>Vida útil da lâmpada:</strong> ~4.000 h (modo normal) / ~5.000 h (modo ECO)</li>
+    <li><strong>Zoom:</strong> 1,0 – 1,35 (digital)</li>
+    <li><strong>Correção de Keystone:</strong> ±30° vertical / ±30° horizontal</li>
+    <li><strong>Tamanho da imagem:</strong> 21″ a 350″ (0,53 a 8,89 m)</li>
+    <li><strong>Entrada de vídeo:</strong> USB, VGA / vídeo analógico</li>
+    <li><strong>Som interno:</strong> Alto-falante de 2 W</li>
+    <li><strong>Ruído:</strong> 37 dB (modo normal) / 29 dB (modo ECO)</li>
+    <li><strong>Peso:</strong> ~2,3 kg</li>
+  </ul>
+
+  <p class="text-gray-700">
+    O Epson PowerLite S12+ é uma ótima escolha como projetor de lâmpada para igrejas menores ou salas com controle de luz.
+    Ele tem brilho moderado, boa portabilidade, correção de keystone ampla e uma lâmpada com durabilidade decente nas
+    horas de uso típico.
+  </p>
+</div>
+<<h4 class="text-xl font-semibold text-orange-600 mt-4">Projetores de LED — Exemplo Multilaser</h4>
+<div class="bg-gray-50 p-4 rounded-xl shadow-inner">
+  <img src="https://raw.githubusercontent.com/Projetoholyrics/Projetoholyrics.github.io/main/projetor%20de%20led.jpg?raw=true"
+       class="w-full max-w-md mx-auto rounded-xl shadow mb-4"
+       alt="Projetor Multilaser PJ003">
+
+  <ul class="list-disc pl-6 text-gray-700 mb-4">
+    <li><strong>Brilho:</strong> ~2.200 lumens</li>
+    <li><strong>Resolução nativa:</strong> 1280 × 720 (720p)</li>
+    <li><strong>Sistema de projeção:</strong> LCD / TFT</li>
+    <li><strong>Vida útil do LED:</strong> ~30.000 horas</li>
+    <li><strong>Distância de projeção:</strong> de 1 m até 4 m</li>
+    <li><strong>Tamanho da imagem projetada:</strong> de 36″ até 150″</li>
+    <li><strong>Correção Keystone:</strong> ±15° (vertical)</li>
+    <li><strong>Entradas:</strong> 2× HDMI, 1× USB, 1× VGA, 1× AV</li>
+    <li><strong>Alto-falante embutido:</strong> 5 W RMS</li>
+  </ul>
+
+  <p class="text-gray-700">
+    Vantagem: como é um projetor LED, o Multilaser PJ003 tem durabilidade da fonte de luz bem alta e quase não exige manutenção.  
+    Limitação: o brilho é menor que projetores potentes de lâmpada, então pode não ser ideal para ambientes com muita luz natural ou tela muito grande.
+  </p>
+</div>
+
+
 
     <!-- Conclusão -->
     <h3 class="text-2xl font-semibold text-orange-700 mt-6">Conclusão</h3>
