--- a/index.html
+++ b/index.html
@@ -579,7 +579,153 @@ Tamanho da tela = Distância do projetor ÷ Throw Ratio
   </p>
 </section>
 
-   
+   <section id="artigo-4" class="py-20 bg-orange-50 px-6 text-left">
+  <h2 class="text-3xl font-bold text-orange-700 mb-6">
+    💻 Como configurar o computador perfeito para projeção na igreja
+  </h2>
+
+  <p class="text-gray-700 mb-6">
+    Uma boa projeção não depende apenas de um projetor potente — o computador que envia as imagens 
+    também precisa ser rápido, estável e preparado para rodar programas como Holyrics, EasyWorship e 
+    apresentações em tempo real. Neste guia, você vai aprender como montar o computador ideal para a 
+    projeção da igreja, com recomendações de peças, configurações e otimizações.
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <!-- PROCESSADOR -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">1. ⚙️ Processador (CPU)</h3>
+  <p class="text-gray-700 mb-4">
+    O processador é o cérebro do computador. Ele precisa ser rápido para carregar músicas, vídeos, 
+    apresentações e transições sem travamentos.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Recomendações:</strong><br>
+    • Intel i3 (10ª geração ou superior)<br>
+    • AMD Ryzen 3 / Ryzen 5 (a partir da série 3000)<br>
+    • Evite processadores Celeron e Pentium — muito lentos para projeção
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Dica técnica:</strong> Quanto maior o número de núcleos (cores), melhor o desempenho com múltiplas janelas e transições.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- MEMÓRIA RAM -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">2. 🧠 Memória RAM</h3>
+  <p class="text-gray-700 mb-4">
+    RAM é vital para um sistema rápido. É ela que mantém músicas, cenas e letras carregadas durante a projeção.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Mínimo recomendado:</strong> 8 GB<br>
+    <strong>Ideal:</strong> 16 GB (para rodar Holyrics + navegador + vídeos simultaneamente)<br>
+    <strong>Evite:</strong> Computadores com 4 GB — sofrem travamentos constantes.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- ARMAZENAMENTO -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">3. ⚡ Armazenamento (SSD)</h3>
+  <p class="text-gray-700 mb-4">
+    SSD é obrigatório. Ele torna o sistema muito mais rápido que um HD comum. 
+    Iniciar o computador, abrir o Holyrics e carregar vídeos fica até 10x mais rápido.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Recomendação:</strong><br>
+    • SSD de 240 GB (mínimo)<br>
+    • SSD de 480 GB ou 1 TB para quem usa muitos vídeos, loops e temas
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Nunca use:</strong> apenas HD mecânico para projeção — é muito lento.
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- PLACA DE VÍDEO -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">4. 🎮 Placa de vídeo (GPU)</h3>
+  <p class="text-gray-700 mb-4">
+    Para a maioria das igrejas, uma placa de vídeo dedicada não é obrigatória. 
+    Processadores modernos já têm vídeo integrado suficiente.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Vídeo integrado recomendado:</strong><br>
+    • Intel UHD Graphics 620 ou superior<br>
+    • AMD Vega 3, Vega 7 ou superior
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Quando usar GPU dedicada:</strong><br>
+    • Se a igreja usa temas animados em 1080p ou 4K<br>
+    • Se roda vídeos pesados no Holyrics<br>
+    • Se usa OBS Studio junto com a projeção
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- SAÍDAS DE VÍDEO -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">5. 🔌 Saídas de vídeo (HDMI / VGA)</h3>
+  <p class="text-gray-700 mb-4">
+    Escolha computadores com saída HDMI para melhor qualidade e estabilidade. 
+    Evite depender de VGA ou adaptadores baratos.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Recomendações:</strong><br>
+    • HDMI é a saída ideal<br>
+    • DisplayPort é excelente (mas exige adaptador para HDMI)<br>
+    • Evite projetar via USB — muito instável
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- WINDOWS -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">6. 🪟 Sistema operacional (Windows)</h3>
+  <p class="text-gray-700 mb-4">
+    O Windows deve estar otimizado para evitar travamentos durante o culto.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Configurações recomendadas:</strong><br>
+    • Desabilitar atualizações automáticas<br>
+    • Desligar notificações<br>
+    • Desabilitar programas em segundo plano<br>
+    • Ativar modo de alto desempenho<br>
+    • Manter drivers atualizados
+  </p>
+
+  <hr class="my-8 border-gray-300">
+
+  <!-- HOLYRICS -->
+  <h3 class="text-2xl font-semibold text-orange-600 mt-8 mb-4">7. 🎤 Configurações recomendadas para o Holyrics</h3>
+  <p class="text-gray-700 mb-4">
+    O Holyrics funciona muito bem mesmo em máquinas simples, mas com algumas configurações ele fica ainda melhor.
+  </p>
+
+  <p class="text-gray-700 mb-4">
+    <strong>Dicas importantes:</strong><br>
+    • Use a saída de vídeo exclusiva para o projetor<br>
+    • Deixe a tela de projeção como “Segunda tela”<br>
+    • Configure a resolução correta do projetor<br>
+    • Evite usar vídeos em 4K se o PC for fraco<br>
+    • Feche sempre navegadores abertos durante o culto
+  </p>
+
+  <hr class="border-orange-300 my-8">
+
+  <h3 class="text-2xl font-bold text-orange-700 mt-8 mb-6">Conclusão</h3>
+  <p class="text-gray-700">
+    Com as configurações certas e um computador bem montado, sua igreja terá uma projeção estável, rápida 
+    e profissional. Um PC otimizado evita travamentos, atrasos e falhas que podem atrapalhar o culto.
+    Se quiser, posso criar uma versão em PDF ou montar uma lista de computadores prontos para compra.
+  </p>
+</section>
+
   <!-- Download -->
   <section id="download" class="py-20 bg-white px-6 text-center">
     <h2 class="text-3xl font-semibold text-orange-700 mb-6">Download do Holyrics</h2>
